Update Russian sound packs for Orc Peon, Human Peasant, and Undead Acolyte with adjusted voice lines and reorganized categories. Add new sound files and remove unused ones.

--- a/packs/peasant_ru/manifest.json
+++ b/packs/peasant_ru/manifest.json
@@ -5,8 +5,7 @@
     "greeting": {
       "sounds": [
         { "file": "PeasantReady1.wav", "line": "Я готов." },
-        { "file": "PeasantWhat1.wav", "line": "Да, господин?" },
-        { "file": "PeasantWhat3.wav", "line": "Опять работа?!" }
+        { "file": "PeasantWhat1.wav", "line": "Да, господин?" }
       ]
     },
     "acknowledge": {
@@ -17,8 +16,7 @@
     },
     "complete": {
       "sounds": [
-        { "file": "PeasantReady1.wav", "line": "Готово." },
-        { "file": "PeasantWhat4.wav", "line": "Ещё работа?" },
+        { "file": "PeasantWhat3.wav", "line": "Опять работа?!" },
         { "file": "PeasantYes4.wav", "line": "Ну, я пошёл!" }
       ]
     },
