refactor(tests): move OpenCode tests to tests/opencode/

--- a/.github/workflows/test-opencode-adapter.yml
+++ b/.github/workflows/test-opencode-adapter.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
     paths:
       - 'adapters/opencode/**'
-      - 'tests/peon-ping-internals.test.ts'
+      - 'tests/opencode/**'
       - 'package.json'
       - 'package-lock.json'
       - 'tsconfig.json'
@@ -14,7 +14,7 @@ on:
     branches: [main]
     paths:
       - 'adapters/opencode/**'
-      - 'tests/peon-ping-internals.test.ts'
+      - 'tests/opencode/**'
       - 'package.json'
       - 'package-lock.json'
       - 'tsconfig.json'
